Add pan & zoom and drag & drop

--- a/www/index.html
+++ b/www/index.html
@@ -101,6 +101,9 @@ if (typeof btoa == 'undefined') {
 	<canvas id="canvas" width="800" height="600">
 		<span class="error">Your browser does not support<br>the HTML5 &lt;canvas&gt; element</span>
 	</canvas>
+	<div class="drop">Test1</div>
+	<div class="drop">Test2</div>
+	<div class="drop">Test3</div>
 	<div>
 		<p class="center">Export as: <a href="javascript:saveAsPNG()">PNG</a> | <a href="javascript:saveAsSVG()">SVG</a> | <a href="javascript:saveAsLaTeX()">LaTeX</a></p>
 		<textarea id="output"></textarea>
