--- a/www/index.html
+++ b/www/index.html
@@ -101,9 +101,10 @@ if (typeof btoa == 'undefined') {
 	<canvas id="canvas" width="800" height="600">
 		<span class="error">Your browser does not support<br>the HTML5 &lt;canvas&gt; element</span>
 	</canvas>
-	<div class="drop">Test1</div>
-	<div class="drop">Test2</div>
-	<div class="drop">Test3</div>
+	<a href="#" id="origin">Back to Origin</a>
+	<input type="text" id="liveChange">
+	<div class="drop">Question</div>
+	<div class="drop">Answer</div>
 	<div>
 		<p class="center">Export as: <a href="javascript:saveAsPNG()">PNG</a> | <a href="javascript:saveAsSVG()">SVG</a> | <a href="javascript:saveAsLaTeX()">LaTeX</a></p>
 		<textarea id="output"></textarea>
@@ -111,9 +112,9 @@ if (typeof btoa == 'undefined') {
 		<ul>
 			<li><b>Add a state:</b> double-click on the canvas</li>
 			<li><b>Add an arrow:</b> shift-drag on the canvas</li>
+			<li><b>Reverse arrow:</b> double-click arrow</li>
 			<li><b>Move something:</b> drag it around</li>
 			<li><b>Delete something:</b> click it and press the delete key (not the backspace key)</li>
-		</ul><ul>
 			<li><b>Make accept state:</b> double-click on an existing state</li>
 			<li><b>Type numeric subscript:</b> put an underscore before the number (like "S_0")</li>
 			<li><b>Type greek letter:</b> put a backslash before it (like "\beta")</li>
